02 User: add jquery validateion, without plugin.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>UserApp</title>
+  <title>User App</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "jquery-1.7.1", "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
