--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -47,6 +47,6 @@
     <%= f.text_field :address %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Register"%>
   </div>
 <% end %>
