04 User: ajax with jquery for validating username

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field" id= "user_name_div">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
