--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -25,6 +25,11 @@
   </div>
 <% end %>
 
+  <div class = "field">
+	<%= f.label :user_id %><br />
+	<%= f.collection_select :user_id, @user, :id, :name, :prompt => "Select a user" %>
+  </div>
+
   <div class="field">
     <%= f.label :level %><br />
     <%= f.text_field :level %>
