--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -2,7 +2,8 @@
 
 <table>
   <tr>
-    <th>Name </th>
+    <th>Account Name </th>
+    <th>User Name </th>
     <th>Level </th>
     <th>Member since </th>
     <th>Description </th>
@@ -14,6 +15,9 @@
 <% @accounts.each do |account| %>
   <tr>
     <td><%= account.name %></td>
+	<% if !account.user.nil? %>
+    <td><%= account.user.name %></td>
+	<% end %>
     <td><%= account.level %></td>
     <td><%= account.member_since %></td>
     <td><%= account.description %></td>
