19 User Account: one-to-one association done.

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -27,7 +27,8 @@
 
   <div class = "field">
 	<%= f.label :user_id %><br />
-	<%= f.collection_select :user_id, @user, :id, :name, :prompt => "Select a user" %>
+	<!-- <%= f.collection_select :user_id, @user, :id, :name, :prompt => "Select a user" %> -->
+	<%= f.collection_select :user_id, User.find_by_sql("select * from users where id not in (select user_id from accounts)"), :id, :name, :prompt => "Select a user" %>
   </div>
 
   <div class="field">
